--- a/tests/test.yml
+++ b/tests/test.yml
@@ -3,3 +3,7 @@
   remote_user: root
   roles:
     - ansible-grafana
+  vars:
+    grafana_dashboards:
+      - slug: docker-dashboard
+        url: https://grafana.com/api/dashboards/179/revisions/5/download
