--- a/tasks/configure-users.yml
+++ b/tasks/configure-users.yml
@@ -27,9 +27,24 @@
     dest: "{{ grafana_admin_password_is_changed_file }}"
     force: no
 
-- include: configure-users.yml
-
-- include: configure-datasources.yml
-
-- include: configure-dashboards.yml
+- name: Create or Update the users
+  uri:
+    url: "http://localhost:{{ grafana_port }}/api/admin/users"
+    method: POST
+    user: "{{ grafana_admin_user|quote }}"
+    password: "{{ grafana_admin_password|quote }}"
+    force_basic_auth: true
+    status_code: 200, 500
+    headers:
+      Content-Type: 'application/json;charset=utf-8;'
+      Accept: 'application/json'
+    body: |
+      {
+        "name":"{{ item.name }}",
+        "email":"{{ item.email }}",
+        "login":"{{ item.login }}",
+        "password":"{{ item.password }}"
+      }
+    body_format: json
+  with_items: "{{ grafana_users }}"
 
