--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,6 @@
 ---
 - { include: install.yml, tags: ["install"] }
-- { include: configure.yml, tags: ["configure"] }
+- { include: configure-users.yml, tags: ["configure"] } 
+- { include: configure-datasources.yml, tags: ["configure"] } 
+- { include: configure-dashboards.yml, tags: ["configure"] } 
+ 
