--- a/tasks/configure-users.yml
+++ b/tasks/configure-users.yml
@@ -1,5 +1,8 @@
 ---
 
+# Also tried to change using grafana-cli but the version installed has a bug:
+# https://community.grafana.com/t/grafana-sqlite3-database-admin-passwd-change/234/9
+#
 - name: Change admin password from default
   uri:
     method: PUT
@@ -27,24 +30,77 @@
     dest: "{{ grafana_admin_password_is_changed_file }}"
     force: no
 
-- name: Create or Update the users
+- name: Get all users configured
   uri:
-    url: "http://localhost:{{ grafana_port }}/api/admin/users"
+    method: GET
+    user: "{{ grafana_admin_user|quote }}"
+    password: "{{ grafana_admin_password|quote }}"
+    force_basic_auth: true
+    body_format: json
+    url: "http://localhost:{{ grafana_port }}/api/users"
+  register: users_raw
+
+- name: Set fact based on the users installed from the raw response
+  set_fact:
+    users_installed: "{{ users_raw.json }}"
+
+- name: Set default list facts
+  set_fact:
+    users_list_to_install: []
+    users_list_to_update: []
+    users_installed_listnames: []
+
+- name: Set fact based on the users installed from the json list
+  set_fact:
+    users_installed_listnames: "{{ users_installed_listnames | default([]) | union( [item.name] ) }}"
+  with_items: "{{ users_installed }}"
+
+- name: Set users fact to install
+  set_fact:
+    users_list_to_install: "{{ users_list_to_install | default([]) | union( [item.name] ) }}"
+  when: not (item.name in users_installed_listnames)
+  with_items: "{{ grafana_users }}"
+
+- name: Set datasorces fact to update
+  set_fact:
+    users_list_to_update: "{{ users_list_to_update | default([]) | union( [item.name] ) }}"
+  when: item.name in users_installed_listnames
+  with_items: "{{ grafana_users }}"
+
+- name: Set users fact to delete
+  set_fact:
+    users_list_to_delete: "{{ users_installed_listnames | difference(users_list_to_install | union(users_list_to_update)) }}"
+
+- name: Create user
+  uri:
     method: POST
     user: "{{ grafana_admin_user|quote }}"
     password: "{{ grafana_admin_password|quote }}"
     force_basic_auth: true
-    status_code: 200, 500
-    headers:
-      Content-Type: 'application/json;charset=utf-8;'
-      Accept: 'application/json'
-    body: |
-      {
-        "name":"{{ item.name }}",
-        "email":"{{ item.email }}",
-        "login":"{{ item.login }}",
-        "password":"{{ item.password }}"
-      }
     body_format: json
+    body: "{{ item | to_json }}"
+    url: "http://localhost:{{ grafana_port }}/api/admin/users"
+  when: item.name in users_list_to_install
   with_items: "{{ grafana_users }}"
 
+- name: Update user
+  uri:
+    method: PUT
+    user: "{{ grafana_admin_user|quote }}"
+    password: "{{ grafana_admin_password|quote }}"
+    force_basic_auth: true
+    body_format: json
+    body: "{{ item | to_json }}"
+    url: "http://localhost:{{ grafana_port }}/api/users/{{item.id}}"
+  when: item.name in users_list_to_update
+  with_items: "{{ users_installed }}"
+
+- name: Delete user
+  uri:
+    method: DELETE
+    user: "{{ grafana_admin_user|quote }}"
+    password: "{{ grafana_admin_password|quote }}"
+    force_basic_auth: true
+    url: "http://localhost:{{ grafana_port }}/api/admin/users/{{item.id}}"
+  when: (item.name in users_list_to_delete) and (item.id != 1)
+  with_items: "{{ users_installed }}"
