--- a/tasks/configure-dashboards.yml
+++ b/tasks/configure-dashboards.yml
@@ -1,13 +1,17 @@
 ---
 
-- name: Create temporary directory for storing the dashboards
+# - name: Create temporary directory for storing the dashboards
+#   become: false
+#   local_action: tempfile state=directory suffix=dashboards
+#   register: tmppath
+
+- name: Create temporary directory to store the dashboards
   become: false
-  local_action: tempfile state=directory suffix=dashboards
-  register: tmppath
+  local_action: file path="/tmp/dashboard-jsons" state=directory
 
 - name: Fetch the JSON dashboards
   become: false
-  local_action: get_url url="{{ item.url }}" dest="{{ tmppath.path }}/{{item.slug}}.json"
+  local_action: get_url url="{{ item.url }}" dest="/tmp/dashboard-jsons/{{item.slug}}.json"
   with_items: "{{ grafana_dashboards }}"
 
 - name: Create or Update the dashboards
@@ -21,7 +25,6 @@
     headers:
       Content-Type: 'application/json;charset=utf-8;'
       Accept: 'application/json'
-    body: "{ 'dashboard': {{ lookup ( 'file', tmppath.path + '/' + item.slug + '.json') | from_json }}, 'overwrite': True } "
+    body: "{ 'dashboard': {{ lookup ( 'file', '/tmp/dashboard-jsons/' + item.slug + '.json') | from_json }}, 'overwrite': True } "
     body_format: json
   with_items: "{{ grafana_dashboards }}"
-
